Added research page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <a href="#" onclick="$('#Projects').animatescroll();">Projects</a>
     <a href="#" onclick= "$('#Inspirations').animatescroll();">Inspirations</a>
     <a href="#" onclick="$('#Contact').animatescroll();">Contact</a>
+    <a href="research.html"> Research </a> 
   </div>
 
   <div class="pimg4" id="Home">
