--- a/research.html
+++ b/research.html
@@ -37,7 +37,7 @@
   <section class="section section-light" id= "Research">
     <h2>User Interviews</h2>
     <div class="about-text">
-    <a href="https://docs.google.com/spreadsheets/d/1G2eFqzGRS2zlSgfVpqVr_S_vSnjXpnTC69idnN84FHA/edit"> <img src= "../img/userInterview.png" style= "width: 50%;height:50%;"></a>
+    <a href="https://docs.google.com/spreadsheets/d/1G2eFqzGRS2zlSgfVpqVr_S_vSnjXpnTC69idnN84FHA/edit"> <img src= "../img/userInterview.png" alt = "user interview" style= "width: 50%;height:50%;"></a>
     <p>
       User Interviews are one of the best ways to gauge what people would want to see in any website, especially in portfolio websites. What you expect to see in a portfolio website may not be what others expect to see, so it helps in having more opinions. Furthermore, you may have forgotten an important aspect of your website that others can point out through a user interview. Questions that are helpful are those that ask what they would expect to see in a portfolio website, or what helps in expressing skills for the website. Another great question would be if the website portrays the owner’s personality well. The questions should strive to come closer to achieving the goals of the website.
     </p>
