--- a/research.html
+++ b/research.html
@@ -37,11 +37,7 @@
   <section class="section section-light" id= "Research">
     <h2>User Interviews</h2>
     <div class="about-text">
-    	<div class= "imgCol" style= "background-image:url('../img/userInterview.png); width: 50%; height:50%;">
-    		<a href="https://docs.google.com/spreadsheets/d/1G2eFqzGRS2zlSgfVpqVr_S_vSnjXpnTC69idnN84FHA/edit">
-    		</a>
-    	</div>
-   
+   <a href="https://docs.google.com/spreadsheets/d/1G2eFqzGRS2zlSgfVpqVr_S_vSnjXpnTC69idnN84FHA/edit"> <img src= "../img/userInterview.png" alt = "user interview" style= "width: 50%;height:50%;"></a>
     <p>
       User Interviews are one of the best ways to gauge what people would want to see in any website, especially in portfolio websites. What you expect to see in a portfolio website may not be what others expect to see, so it helps in having more opinions. Furthermore, you may have forgotten an important aspect of your website that others can point out through a user interview. Questions that are helpful are those that ask what they would expect to see in a portfolio website, or what helps in expressing skills for the website. Another great question would be if the website portrays the owner’s personality well. The questions should strive to come closer to achieving the goals of the website.
     </p>
@@ -51,7 +47,7 @@
   <section class="section section-dark" id= "Research">
     <h2>Competitor Analysis</h2>
     <div class="about-text">
-    <a href="https://docs.google.com/a/uci.edu/spreadsheets/d/1MCh5WCAcxHMMnGLwL3NB04CDpbtnzJ1zfIIj9Go-X34/edit?usp=drive_web"> <img src= "img/competitorAnal.png" style= "width: 50%;height:50%;"></a>
+    <a href="https://docs.google.com/a/uci.edu/spreadsheets/d/1MCh5WCAcxHMMnGLwL3NB04CDpbtnzJ1zfIIj9Go-X34/edit?usp=drive_web"> <img src= "../../img/competitorAnal.png" style= "width: 50%;height:50%;"></a>
     <p>
       A competitor analysis is when you do active research on competitors of your products. In this case, I did research on other portfolio websites that exhibits creativity and uniqueness that is worthy of being called a “great” website. I searched for other websites that are featured in top 10 websites to search for inspiration. I looked at their style and how they portray their personality through the website, or how they make it look professional. I also took note of what they use in html and css styling to get an idea of how to use these techniques for my website.
     </p>
@@ -62,7 +58,7 @@
   <section class="section section-light" id= "Research">
     <h2>Feature Value Matrix</h2>
     <div class="about-text">
-    <a href="https://docs.google.com/spreadsheets/d/1ETdhpeWydUwz6oxGX8QWyxwhvTxrfWIsigTTMsbslAc/edit#gid=2"> <img src= "img/featureValueMatrix.png" style= "width: 50%;height:50%;"></a>
+    <a href="https://docs.google.com/spreadsheets/d/1ETdhpeWydUwz6oxGX8QWyxwhvTxrfWIsigTTMsbslAc/edit#gid=2"> <img src= "../img/featureValueMatrix.png" style= "width: 50%;height:50%;"></a>
     <p>
     The feature value matrix shows a list of features I want for the website that awards points based on high value in user, business, and technical effort. Which features need to be implemented are those that are high in user value, and low in technical effort. I added features such as: parallax scrolling, images, scrolling links, and a fixed nav bar as basic features for my website to maximize the user satisfaction of the website.
     </p>
@@ -72,7 +68,7 @@
   <section class="section section-dark" id= "Research">
     <h2>Feature Prioritization</h2>
     <div class="about-text">
-    <a href="https://docs.google.com/presentation/d/1mcT_Pe5RfnR6NudHp3n9afEk4pJgZvN1bCInc4XRUSM/edit#slide=id.gd46c24b48_0_24"> <img src= "img/FeaturePrioritization.png" style= "width: 50%;height:50%;"></a>
+    <a href="https://docs.google.com/presentation/d/1mcT_Pe5RfnR6NudHp3n9afEk4pJgZvN1bCInc4XRUSM/edit#slide=id.gd46c24b48_0_24"> <img src= "../img/FeaturePrioritization.png" style= "width: 50%;height:50%;"></a>
     <p>
       Feature Prioritization is the graphical representation of the feature value matrix. It shows which features are needed in an easy to see visual way. Each feature is shown in a graph that connects to each category. For prioritizing, the features that are high in the user value line, and low in technical effort is shown to be near the origin of the graph, and so we prioritize those features.
     </p>
@@ -83,7 +79,7 @@
   <section class="section section-light" id= "Research">
     <h2>User Stories</h2>
     <div class="about-text">
-    <a href="https://docs.google.com/spreadsheets/d/1Cc6fmp4qPVxeRHa4-eyfkuPQ8ZYW5bnSBGJ4TS90bgo/edit#gid=0"> <img src= "img/UserStories.png" style= "width: 50%;height:50%;"></a>
+    <a href="https://docs.google.com/spreadsheets/d/1Cc6fmp4qPVxeRHa4-eyfkuPQ8ZYW5bnSBGJ4TS90bgo/edit#gid=0"> <img src= "../img/UserStories.png" style= "width: 50%;height:50%;"></a>
     <p>
     User Stories are a way to imagine what sort of users will use your website, and what types of behaviors they will display with your current iteration of the website. The Stories I made follows a basic demographic of recruiters, coworkers, friends and family. They each have a reason to go to my website, due to business or personal reasons. User stories are a way to make sure that these users can accomplish what they want to do using your website.
     </p>
@@ -93,7 +89,7 @@
   <section class="section section-dark" id= "Research">
     <h2>Cognitive Walkthrough</h2>
     <div class="about-text">
-    <a href="https://docs.google.com/spreadsheets/d/1JXiQjX-JDWrBXfofACok5lInPTZYKJN93yHkAJsVQt8/edit#gid=0"> <img src= "img/cogWalkthrough.png" style= "width: 50%;height:50%;"></a>
+    <a href="https://docs.google.com/spreadsheets/d/1JXiQjX-JDWrBXfofACok5lInPTZYKJN93yHkAJsVQt8/edit#gid=0"> <img src= "../img/cogWalkthrough.png" style= "width: 50%;height:50%;"></a>
     <p>
       Cognitive Walkthroughs are like user interviews, but more intensive and letting the user use the website. You can ask questions during the walkthrough that further explains why they did that behavior. I asked questions on why they clicked on that button to go to a section they wanted to go, so that I know exactly if my buttons and display are achieving my desired goal of getting them to go to that section. Each cognitive walkthrough had its fair share of uniqueness in that some users don’t know how to get to a section, while others know exactly where to go.
     </p>
@@ -103,7 +99,7 @@
   <section class="section section-light" id= "Research">
     <h2>User Testing</h2>
     <div class="about-text">
-    <a href="https://usabilityhub.com/tests/cbf4645bc7cd/results/dde2e02fdbe2"> <img src= "img/click.png" style= "width: 50%;height:50%;"></a>
+    <a href="https://usabilityhub.com/tests/cbf4645bc7cd/results/dde2e02fdbe2"> <img src= "../img/click.png" style= "width: 50%;height:50%;"></a>
     <p>
   I chose the 5 second test and the click test for my usability testing. I chose them because they are the easiest and provides the most information for me. The 5 second test gives a view of the website for 5 seconds and I can ask a variety of questions after to the user. I asked what they focused on for the 5 seconds, which element stands out the most, what they think the webpage is about, and what they dislike about it. I chose the click test to gauge the user’s behavior in doing a task. It shows a heatmap of where the user clicks on the screen. The task I chose is where would you click to go find a portfolio. Some challenges were acquiring volunteers for the test, and creating suitable questions for the tests.
     </p>
